Added scriptoaculous.js and prototype.js

--- a/app/views/taskboard/index.html.erb
+++ b/app/views/taskboard/index.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag('prototype', :plugin => 'redmine_task_board') %>
+<%= javascript_include_tag('scriptaculous', :plugin => 'redmine_task_board') %>
 <%= javascript_include_tag('task_board', :plugin => 'redmine_task_board') %>
 
 <div id="taskboard-buttons">
